--- a/um.html
+++ b/um.html
@@ -51,7 +51,7 @@ Deutsche Grammophon 445 570-2
 
 <tr>
 <td valign="top"><img src="covers/sj_tew.jpg" width="130" height="130" border="0" alt="[cover]" title=""></td>
-<td valign="top"><b><a href="http://de.wikipedia.org/wiki/Scott_Joplin">Scott Joplin</a> (1868&ndash1917): The Easy Winners And Other Rag-Time Music</b><br>
+<td valign="top"><b><a href="http://de.wikipedia.org/wiki/Scott_Joplin">Scott Joplin</a> (1868&ndash;1917): The Easy Winners And Other Rag-Time Music</b><br>
 <i>Itzhak Perlman, Violine<br>
 Andr&eacute; Previn, Klavier</i><br>
 EMI CDC 7 47170 2</td>
@@ -59,7 +59,7 @@ EMI CDC 7 47170 2</td>
 
 <tr>
 <td valign="top"><a href="http://www.amazon.de/gp/product/B0000046Z5"><img src="covers/gg_pab.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
-<td valign="top"><b><a href="http://de.wikipedia.org/wiki/George_Gershwin">George Gershwin</a> (1898&ndash1937): Porgy and Bess &ndash; Querschnitt</b><br>
+<td valign="top"><b><a href="http://de.wikipedia.org/wiki/George_Gershwin">George Gershwin</a> (1898&ndash;1937): Porgy and Bess &ndash; Querschnitt</b><br>
 <i>Ella Fitzgerald, Louis Armstrong</i><br>
 Verve 827 475-2</td>
 </tr>
