--- a/em.html
+++ b/em.html
@@ -50,7 +50,7 @@ Archiv Produktion 415 517-2</td>
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B007NM8D8O"><img src="covers/tldv_od.jpg" width="130" height="124" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.discogs.com/release/4083607"><img src="covers/lph005.jpg" width="130" height="124" border="0" alt="[cover]" title="discogs info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Tom%C3%A1s_Luis_de_Victoria">Tom&aacute;s Luis de Victoria</a> (ca. 1548&ndash;1611): Officium Defunctorum<br>
 <a href="https://de.wikipedia.org/wiki/Tom%C3%A1s_Luis_de_Victoria">Tom&aacute;s Luis de Victoria</a> (ca. 1548&ndash;1611): Motets</b><br>
 <i>Collegium Vocale Gent, Philippe Herreweghe</i><br>
@@ -896,7 +896,7 @@ Deutsche Grammophon 419 162-2</td>
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B00000IIX1"><img src="covers/beethoven_piano_concertos.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B00000IIX1"><img src="covers/beethoven_kk.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Klavierkonzerte 1&ndash;5</b><br>
 <i>Alfred Brendel, Klavier<br>
 Wiener Philharmoniker, Simon Rattle</i><br>
@@ -906,7 +906,7 @@ Decca 462 7812
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B000002RQP"><img src="covers/beethoven_pb.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B000002RQP"><img src="covers/749567.jpg" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Violinkonzert D-dur op.&nbsp;61<br>
 <a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Romanze Nr.&nbsp;1 G-dur op.&nbsp;40<br>
 <a href="https://de.wikipedia.org/wiki/Ludwig_van_Beethoven">Ludwig van Beethoven</a> (1770&ndash;1827): Romanze Nr.&nbsp;2 F-dur op.&nbsp;50</b><br>
@@ -1078,7 +1078,7 @@ Tudor 7196
 </tr>
 
 <tr>
-<td valign="top"><a href="https://www.amazon.de/gp/product/B000025R54"><img src="covers/449087.jpg" width="130" height="124" border="0" alt="[cover]" title="amazon.de info"></a></td>
+<td valign="top"><a href="https://www.amazon.de/gp/product/B000025R54"><img src="covers/449087.gif" width="130" height="130" border="0" alt="[cover]" title="amazon.de info"></a></td>
 <td valign="top"><b><a href="https://de.wikipedia.org/wiki/Johannes_Brahms">Johannes Brahms</a> (1833&ndash;1897): 49 Deutsche Volkslieder<br>
 <a href="https://de.wikipedia.org/wiki/Johannes_Brahms">Johannes Brahms</a> (1833&ndash;1897): 14 Volks-Kinderlieder</b><br>
 <i>Edith Mathis, Peter Schreier<br>
